<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/coffee"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp">


        <EditText
            android:id="@+id/name_field"
            android:layout_marginTop="8dp"
            android:hint="@string/name"
            android:inputType="textCapWords"
            style="@style/HeaderTextStyle" />


        <TextView
            android:paddingTop="16dp"
            android:text="@string/toppings"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            style="@style/HeaderTextStyle"/>

        <CheckBox
            android:id="@+id/ice_cream_checkbox"
            android:text="@string/icecream"
            style="@style/CheckBoxStyle"/>

        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:text="@string/chocolate"
            style="@style/CheckBoxStyle"/>


        <TextView
            android:id="@+id/quantity"
            android:text="@string/quantity"
            android:textColor="@android:color/white"
            style="@style/HeaderTextStyle"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:layout_margin="8dp"
            android:orientation="horizontal">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="decrement"
                android:padding="4dp"
                android:text="@string/dec"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/q"
                android:textColor="@android:color/white"
                android:textSize="36sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:onClick="increment"
                android:padding="4dp"
                android:text="@string/inc"
                android:textColor="@android:color/black" />
        </LinearLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitOrder"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/order"
            android:textColor="@android:color/black"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_marginTop="16dp"
            android:text="@string/msg1"
            android:textColor="@android:color/black"
            style="@style/FooterTextStyle"/>

        <TextView
            android:text="@string/msg2"
            android:textColor="@android:color/black"
            style="@style/FooterTextStyle"/>

        <TextView
            android:text="@string/msg3"
            android:textColor="@android:color/black"
            style="@style/FooterTextStyle"/>

        <TextView
            android:text="@string/msg4"
            android:textColor="@android:color/black"
            style="@style/FooterTextStyle"/>


    </LinearLayout>

</ScrollView>